# papaya

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  motivation.html  objects.inv  pyproject.toml  supported_data_types.html  usage.html  use_cases.html
docs/: index.md  motivation.md  supported_data_types.md  usage.md  use_cases.md
docs/assets/: papaya_logo.drawio
docs/usage/: datetimes_and_timestamps.md  index_and_multiindex_support.md  usage.md
src/: objects_backing_dataframe.py  objects_convertible_dataframe.py  objects_dataframe_base.py  papaya_config.py  papaya_types.py  pya_types.py  utils.py
tests/: test_objects_backing_dataframe.py  test_objects_convertible_dataframe.py  test_readme_example.py
usage/: datetimes_and_timestamps.html  index_and_multiindex_support.html  usage.html
