[project]
name = "papaya"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "pandera (>=0.24.0,<0.25.0)", "pytest (>=8.3.5,<9.0.0)", "mkdocs (>=1.6.1,<2.0.0)", "mkdocs-material (>=9.6.14,<10.0.0)", "mkdocstrings-python (>=1.16.11,<2.0.0)"]

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests/"]

[tool.ruff]
src = ["src/"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "DTZ", "RUF", "PERF"]
